--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
