--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "Server for the hovir project",
   "main": "server.ts",
-  "type": "module",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server"
+    "dev": "nodemon --esm server"
   },
   "author": "Dmytro Kolosovskyi",
   "license": "ISC",
@@ -14,7 +13,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,7 +23,7 @@
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
+    "multer-gridfs-storage": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -34,9 +33,11 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
 }
